--- a/about.html
+++ b/about.html
@@ -14,6 +14,15 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5FTKEK2W0V"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-5FTKEK2W0V');
+  </script>
   <style>
     /* Custom styles */
     .social-links {
@@ -201,18 +210,20 @@
         forced-color-adjust: none;
       }
     }
+
     .rd-navbar-brand .brand-name {
       display: flex;
-      align-items: center; /* Vertically center the icon and text */
+      align-items: center;
+      /* Vertically center the icon and text */
     }
+
     .rd-navbar-brand .brand-name img {
-      width: 30px; /* Adjust icon size as needed */
+      width: 30px;
+      /* Adjust icon size as needed */
       height: 30px;
-      margin-right: 10px; /* Add spacing between icon and text */
+      margin-right: 10px;
+      /* Add spacing between icon and text */
     }
-
-
-
   </style>
 
 </head>
@@ -351,11 +362,12 @@
           <div class="col-md-6 col-lg-4">
             <div class="thumb thumb-corporate">
               <div class="thumb-corporate__main">
-                <img src="images/d.webp" alt="Daniel Xiao" 
-                     style="width: 100%; height: 362px; border-radius: 50%; object-fit: cover;">
+                <img src="images/d.webp" alt="Daniel Xiao"
+                  style="width: 100%; height: 362px; border-radius: 50%; object-fit: cover;">
                 <div class="thumb-corporate__overlay">
                   <ul class="list-inline-sm thumb-corporate__list">
-                    <li><a class="icon-sm fa-twitter icon novi-icon" href="https://x.com/xdanielf124" target="_blank"></a></li>
+                    <li><a class="icon-sm fa-twitter icon novi-icon" href="https://x.com/xdanielf124"
+                        target="_blank"></a></li>
                   </ul>
                 </div>
               </div>
@@ -365,15 +377,16 @@
               </div>
             </div>
           </div>
-    
+
           <div class="col-md-6 col-lg-4">
             <div class="thumb thumb-corporate">
               <div class="thumb-corporate__main">
-                <img src="images/j.webp" alt="Jack Will" 
-                     style="width: 100%; height: 362px; border-radius: 50%; object-fit: cover;">
+                <img src="images/j.webp" alt="Jack Will"
+                  style="width: 100%; height: 362px; border-radius: 50%; object-fit: cover;">
                 <div class="thumb-corporate__overlay">
                   <ul class="list-inline-sm thumb-corporate__list">
-                    <li><a class="icon-sm fa-twitter icon novi-icon" href="https://x.com/jackwill" target="_blank"></a></li>
+                    <li><a class="icon-sm fa-twitter icon novi-icon" href="https://x.com/jackwill" target="_blank"></a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -383,15 +396,16 @@
               </div>
             </div>
           </div>
-    
+
           <div class="col-md-6 col-lg-4">
             <div class="thumb thumb-corporate">
               <div class="thumb-corporate__main">
-                <img src="images/a.webp" alt="Anne Clays" 
-                     style="width: 100%; height: 362px; border-radius: 50%; object-fit: cover;">
+                <img src="images/a.webp" alt="Anne Clays"
+                  style="width: 100%; height: 362px; border-radius: 50%; object-fit: cover;">
                 <div class="thumb-corporate__overlay">
                   <ul class="list-inline-sm thumb-corporate__list">
-                    <li><a class="icon-sm fa-twitter icon novi-icon" href="https://x.com/aanne" target="_blank"></a></li>
+                    <li><a class="icon-sm fa-twitter icon novi-icon" href="https://x.com/aanne" target="_blank"></a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -515,8 +529,8 @@
     <footer class="footer-corporate novi-background bg-cover">
       <div class="container">
         <div class="footer-corporate__inner">
-          <p class="rights"><span>DanielMindTech</span><span> © </span><span
-              class="copyright-year"></span>. All Rights Reserved.</p>
+          <p class="rights"><span>DanielMindTech</span><span> © </span><span class="copyright-year"></span>. All Rights
+            Reserved.</p>
           <ul class="list-inline-xxs">
             <li><a class="novi-icon icon icon-xxs icon-primary fa-twitter" href="https://x.com/DanielMindTech"></a></li>
             <li><a class="novi-icon icon icon-xxs icon-primary fa-facebook"
