--- a/index.html
+++ b/index.html
@@ -11,33 +11,107 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Franklin:200,300,500,600,300italic">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5FTKEK2W0V"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-5FTKEK2W0V');
+  </script>
   <style>
-    .swiper-slide-video {position:relative;overflow:hidden;height:100vh}
-    .swiper-slide-video video {position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover}
-    .swiper-slide-caption {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        background: linear-gradient(to top, rgba(255, 255, 255, 0.6) 0%, rgba(255,255,255,0.4) 50%, transparent 100%); /* Semi-transparent white background */
-        color: #000; /* Black text color */
-        padding: 6rem 0;
-        text-align: center;
+    .swiper-slide-video {
+      position: relative;
+      overflow: hidden;
+      height: 100vh
     }
-    .swiper-slide-caption h1, .swiper-slide-caption h2, .swiper-slide-caption h3, .swiper-slide-caption h5 {
-        text-shadow: none; /* Remove text shadow */
+
+    .swiper-slide-video video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover
+    }
+
+    .swiper-slide-caption {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: linear-gradient(to top, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.4) 50%, transparent 100%);
+      /* Semi-transparent white background */
+      color: #000;
+      /* Black text color */
+      padding: 6rem 0;
+      text-align: center;
+    }
+
+    .swiper-slide-caption h1,
+    .swiper-slide-caption h2,
+    .swiper-slide-caption h3,
+    .swiper-slide-caption h5 {
+      text-shadow: none;
+      /* Remove text shadow */
     }
 
     /* Add padding around the text for better readability */
     .swiper-slide-caption .container {
-        padding: 2rem; /* Adjust as needed */
+      padding: 2rem;
+      /* Adjust as needed */
     }
-    .swiper-slide-caption h1 {font-size:4rem;font-weight:700;margin-bottom:1rem;text-shadow:2px 2px 4px rgba(0,0,0,.5);letter-spacing:1px}
-    .swiper-slide-caption h2 {font-size:3rem;font-weight:600;margin-bottom:1.5rem;text-shadow:2px 2px 4px rgba(0,0,0,.5)}
-    .swiper-slide-caption h3 {font-size:2rem;font-weight:500;margin-bottom:2rem;text-shadow:2px 2px 4px rgba(0,0,0,.5)}
-    .swiper-slide-caption h5 {font-size:1.5rem;font-weight:400;margin-bottom:1.5rem;text-shadow:2px 2px 4px rgba(0,0,0,.5);max-width:800px;margin-left:auto;margin-right:auto}
-    .button.button-primary {background-color:#2196F3;color:#fff;padding:15px 30px;border-radius:30px;text-transform:uppercase;font-weight:600;letter-spacing:1px;transition:all .3s ease;border:2px solid transparent}
-    .button.button-primary:hover {background-color:transparent;border-color:#2196F3;transform:translateY(-2px)}
+
+    .swiper-slide-caption h1 {
+      font-size: 4rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, .5);
+      letter-spacing: 1px
+    }
+
+    .swiper-slide-caption h2 {
+      font-size: 3rem;
+      font-weight: 600;
+      margin-bottom: 1.5rem;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, .5)
+    }
+
+    .swiper-slide-caption h3 {
+      font-size: 2rem;
+      font-weight: 500;
+      margin-bottom: 2rem;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, .5)
+    }
+
+    .swiper-slide-caption h5 {
+      font-size: 1.5rem;
+      font-weight: 400;
+      margin-bottom: 1.5rem;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, .5);
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto
+    }
+
+    .button.button-primary {
+      background-color: #2196F3;
+      color: #fff;
+      padding: 15px 30px;
+      border-radius: 30px;
+      text-transform: uppercase;
+      font-weight: 600;
+      letter-spacing: 1px;
+      transition: all .3s ease;
+      border: 2px solid transparent
+    }
+
+    .button.button-primary:hover {
+      background-color: transparent;
+      border-color: #2196F3;
+      transform: translateY(-2px)
+    }
   </style>
   <!--[if lt IE 10]>
     <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
@@ -49,59 +123,62 @@
   <div class="page">
     <!-- ... (rest of your HTML code - unchanged except for the slider section below) ... -->
     <section>
-      <div class="swiper-container swiper-slider swiper-slider_fullheight" data-simulate-touch="false" data-loop="false" data-autoplay="false">
-          <div class="swiper-wrapper">
-              <!-- ... (Swiper slides - only change is within the swiper-slide-caption divs) ... -->
-              <div class="swiper-slide swiper-slide-video">
-                  <video loop muted autoplay playsinline poster="images/i1.jpg">
-                      <source src="video/i1.webm" type="video/webm">
-                      Your browser does not support the video tag.
-                  </video>
-                  <div class="swiper-slide-caption">
-                      <div class="container">  </div>
-                      <div class="container">
-                          <h1 data-caption-animate="fadeInUpSmall">DanielMindTech</h1>
-                          <h3 data-caption-animate="fadeInUpSmall" data-caption-delay="200">Free Science Popularization</h3>
-                          <div class="group-lg group-middle">
-                              <a class="button button-primary" data-caption-animate="fadeInUpSmall" data-caption-delay="350" href="#section-see-features" data-custom-scroll-to="section-see-features">Learn More</a>
-                          </div>
-                      </div>
-                  </div>
+      <div class="swiper-container swiper-slider swiper-slider_fullheight" data-simulate-touch="false" data-loop="false"
+        data-autoplay="false">
+        <div class="swiper-wrapper">
+          <!-- ... (Swiper slides - only change is within the swiper-slide-caption divs) ... -->
+          <div class="swiper-slide swiper-slide-video">
+            <video loop muted autoplay playsinline poster="images/i1.jpg">
+              <source src="video/i1.webm" type="video/webm">
+              Your browser does not support the video tag.
+            </video>
+            <div class="swiper-slide-caption">
+              <div class="container"> </div>
+              <div class="container">
+                <h1 data-caption-animate="fadeInUpSmall">DanielMindTech</h1>
+                <h3 data-caption-animate="fadeInUpSmall" data-caption-delay="200">Free Science Popularization</h3>
+                <div class="group-lg group-middle">
+                  <a class="button button-primary" data-caption-animate="fadeInUpSmall" data-caption-delay="350"
+                    href="#section-see-features" data-custom-scroll-to="section-see-features">Learn More</a>
+                </div>
               </div>
-
-
-              <div class="swiper-slide swiper-slide-video">
-                  <video loop muted autoplay playsinline poster="images/i2.jpg">
-                      <source src="video/i2.webm" type="video/webm">
-                      Your browser does not support the video tag.
-                  </video>
-                  <div class="swiper-slide-caption">
-                      <div class="container">
-                          <h2 data-caption-animate="fadeInLeftSmall">Explore Space, IT, Cybersecurity, Psychology & More</h2>
-                      </div>
-                  </div>
-              </div>
-
-
-              <div class="swiper-slide swiper-slide-video">
-                  <video loop muted autoplay playsinline poster="images/i3.jpg">
-                      <source src="video/i3.webm" type="video/webm">
-                      Your browser does not support the video tag.
-                  </video>
-                  <div class="swiper-slide-caption">
-                      <div class="container">
-                          <h2 data-caption-animate="fadeInUpSmall">Free Access to Knowledge</h2>
-                          <h5 class="text-width-2 block-centered" data-caption-animate="fadeInUpSmall" data-caption-delay="200">Ad-supported model for sustainable learning.</h5>
-                      </div>
-                  </div>
-              </div>
-
+            </div>
           </div>
-          <div class="swiper-pagination"></div>
-          <div class="swiper-button-prev linear-icon-chevron-left"></div>
-          <div class="swiper-button-next linear-icon-chevron-right"></div>
+
+
+          <div class="swiper-slide swiper-slide-video">
+            <video loop muted autoplay playsinline poster="images/i2.jpg">
+              <source src="video/i2.webm" type="video/webm">
+              Your browser does not support the video tag.
+            </video>
+            <div class="swiper-slide-caption">
+              <div class="container">
+                <h2 data-caption-animate="fadeInLeftSmall">Explore Space, IT, Cybersecurity, Psychology & More</h2>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="swiper-slide swiper-slide-video">
+            <video loop muted autoplay playsinline poster="images/i3.jpg">
+              <source src="video/i3.webm" type="video/webm">
+              Your browser does not support the video tag.
+            </video>
+            <div class="swiper-slide-caption">
+              <div class="container">
+                <h2 data-caption-animate="fadeInUpSmall">Free Access to Knowledge</h2>
+                <h5 class="text-width-2 block-centered" data-caption-animate="fadeInUpSmall" data-caption-delay="200">
+                  Ad-supported model for sustainable learning.</h5>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-prev linear-icon-chevron-left"></div>
+        <div class="swiper-button-next linear-icon-chevron-right"></div>
       </div>
-  </section>
+    </section>
     <section class="section-xl bg-white text-center novi-background bg-cover" id="section-see-features">
       <div class="container">
         <div class="row row-fix justify-content-lg-center">
@@ -247,7 +324,8 @@
           <div class="col-md-6 col-lg-4">
             <div class="thumb thumb-corporate">
               <div class="thumb-corporate__main">
-                <img class="round-img" src="images/d.webp" alt="Daniel Xiao" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
+                <img class="round-img" src="images/d.webp" alt="Daniel Xiao" width="150" height="150"
+                  style="border-radius: 50%; object-fit: cover;">
                 <div class="thumb-corporate__overlay">
                   <ul class="list-inline-sm thumb-corporate__list">
                     <li><a class="icon-sm fa-twitter icon novi-icon" href="https://x.com/xdanielf124"></a></li>
@@ -263,7 +341,8 @@
           <div class="col-md-6 col-lg-4">
             <div class="thumb thumb-corporate">
               <div class="thumb-corporate__main">
-                <img class="round-img" src="images/j.webp" alt="Jack Will" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
+                <img class="round-img" src="images/j.webp" alt="Jack Will" width="150" height="150"
+                  style="border-radius: 50%; object-fit: cover;">
                 <div class="thumb-corporate__overlay">
                   <ul class="list-inline-sm thumb-corporate__list">
                     <li><a class="icon-sm fa-twitter icon novi-icon" href="https://x.com/jackwill"></a></li>
@@ -279,7 +358,8 @@
           <div class="col-md-6 col-lg-4">
             <div class="thumb thumb-corporate">
               <div class="thumb-corporate__main">
-                <img class="round-img" src="images/a.webp" alt="Anne Clays" width="150" height="150" style="border-radius: 50%; object-fit: cover;">
+                <img class="round-img" src="images/a.webp" alt="Anne Clays" width="150" height="150"
+                  style="border-radius: 50%; object-fit: cover;">
                 <div class="thumb-corporate__overlay">
                   <ul class="list-inline-sm thumb-corporate__list">
                     <li><a class="icon-sm fa-twitter icon novi-icon" href="https://x.com/aanne"></a></li>
@@ -348,14 +428,17 @@
     <section class="section-xl bg-white text-center novi-background bg-cover">
       <div class="container">
         <h5>Stay Updated with the Latest Science News</h5>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc0lA3IaltPRn6AHjAxSJ7ncfYYoHX8xUQz36br9Ymk4NKWJw/viewform?embedded=true" width="640" height="553" frameborder="0" marginheight="0" marginwidth="0">正在加载…</iframe>
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLSc0lA3IaltPRn6AHjAxSJ7ncfYYoHX8xUQz36br9Ymk4NKWJw/viewform?embedded=true"
+          width="640" height="553" frameborder="0" marginheight="0" marginwidth="0">正在加载…</iframe>
     </section>
     <section class="pre-footer-corporate novi-background bg-cover">
       <div class="container">
-        <div class="row row-30 row-md-60 py-3 py-md-5">  <!-- Added padding -->
+        <div class="row row-30 row-md-60 py-3 py-md-5"> <!-- Added padding -->
           <div class="col-sm-10 col-md-6 col-lg-4">
             <h6>About Us</h6>
-            <p>DanielMindTech is a platform dedicated to providing free and accessible science popularization content. We cover a wide range of topics, making learning engaging and informative for everyone.</p>
+            <p>DanielMindTech is a platform dedicated to providing free and accessible science popularization content.
+              We cover a wide range of topics, making learning engaging and informative for everyone.</p>
           </div>
           <div class="col-sm-10 col-md-6 col-lg-4">
             <h6>Contact Us</h6>
@@ -377,9 +460,12 @@
                   <dt>Social Media</dt>
                   <dd>
                     <ul class="list-inline-xxs">
-                      <li><a class="novi-icon icon icon-xxs icon-primary fa fa-twitter" href="https://x.com/DanielMindTech"></a></li>
-                      <li><a class="novi-icon icon icon-xxs icon-primary fa fa-facebook" href="https://facebook.com/DanielMindTech"></a></li>
-                      <li><a class="novi-icon icon icon-xxs icon-primary fa fa-instagram" href="https://instagram.com/DanielMindTech"></a></li>
+                      <li><a class="novi-icon icon icon-xxs icon-primary fa fa-twitter"
+                          href="https://x.com/DanielMindTech"></a></li>
+                      <li><a class="novi-icon icon icon-xxs icon-primary fa fa-facebook"
+                          href="https://facebook.com/DanielMindTech"></a></li>
+                      <li><a class="novi-icon icon icon-xxs icon-primary fa fa-instagram"
+                          href="https://instagram.com/DanielMindTech"></a></li>
                     </ul>
                   </dd>
                 </dl>
